edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

// Represents the data structure for a TechnicalDataGen2v2 transfer.
// See Appendix 7, Section 2.2.6.6.
message TechnicalDataGen2v2 {
  // Fields will be defined in a subsequent step.
}
